feat: Refactor AppUser and related classes to use Lombok annotations for cleaner code